# twitch-chat-tracker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.report_gen  Dockerfile.update_changed_names  README.md  cronjob-update_changed_names.yaml  dep.example.yaml  deploy-twitch-chat-logger.yaml  docker  emotes  job-twitch-tracker-report-generator.yaml  stripped_messages.db
app_config/: Cargo.toml
app_config/src/: clap.rs  config.rs  lib.rs  log_level_wrapper.rs
app_config/src/config/: config.rs  database_protocol.rs  mod.rs  rolling_appender_rotation.rs
backend/: Cargo.toml  Dockerfile
backend/kube/: deploy-backend.yaml  service-backend.yaml
backend/src/: error.rs  lib.rs  logging.rs  main.rs
backend/src/data_transfer_objects/: donation_event.rs  follow.rs  gift_sub_recipient.rs  stream.rs  stream_message.rs  subscription_event.rs  twitch_user_name_change.rs
backend/src/response_models/: mod.rs  paginated_parameters.rs  paginatied_response.rs
backend/src/routes/: mod.rs  route_builder.rs
backend/src/routes/donations/: mod.rs  subathon_data.rs  subscriptions.rs
backend/src/routes/helpers/: get_users.rs  mod.rs  user_identifier.rs
backend/src/routes/users/: following.rs  get_users.rs  messages.rs  mod.rs  name_changes.rs  streams.rs
database_connection/: Cargo.toml
database_connection/src/: lib.rs
database_report_generator/: Cargo.toml  job-twitch-tracker-report-generator.yaml
database_report_generator/src/: chat_statistics.rs  conditions.rs  currency_exchangerate.rs  errors.rs  lib.rs  logging.rs  main.rs  pastebin.rs  upload_reports.rs
database_report_generator/src/conditions/: query_conditions.rs  query_conditions_builder.rs
database_report_generator/src/query_result_models/: emote_usage_contents.rs  mod.rs
database_report_generator/src/templates/: chat_messages.rs  chat_messages_template.rs  chat_statistics.rs  chat_statistics_template.rs  mod.rs
database_report_generator/src/templates/donation_rankings/: donator_identifier.rs  mod.rs  top_donators.rs  top_donators_entry.rs
entities/: Cargo.toml
entities/src/: donation_event.rs  emote.rs  emote_usage.rs  gift_sub_recipient.rs  lib.rs  mod.rs  prelude.rs  raid.rs  sea_orm_active_enums.rs  stream.rs  stream_message.rs  stream_name.rs  subscription_event.rs  twitch_user.rs  twitch_user_name_change.rs  twitch_user_unknown_user_association.rs  unknown_user.rs  user_timeout.rs
entities/src/extensions/: emote.rs  mod.rs  prelude.rs  stream.rs  stream_message.rs  twitch_user.rs  twitch_user_unknown_user_association.rs  unknown_user.rs
entity_extensions/: Cargo.toml
entity_extensions/src/: donation_event.rs  emote.rs  errors.rs  external_service.rs  lib.rs  prelude.rs  stream.rs  stream_message.rs  twitch_user.rs  twitch_user_unknown_user_association.rs  unknown_user.rs
query_interface_backend/: Cargo.toml  Dockerfile  ingress-route-twitch-logger-query-backend.yaml  service-twitch-logger-query-interface-backend.yaml
query_interface_backend/kube/: deploy-backend.yaml  ingress-backend.yaml
query_interface_backend/src/: app.rs  error.rs  lib.rs  main.rs
query_interface_backend/src/data_transfer_objects/: follow.rs  gift_sub_recipient.rs  mod.rs  stream.rs
query_interface_backend/src/response_models/: paginatied_response.rs
query_interface_backend/src/routes/: mod.rs  route_builder.rs  users.rs
query_interface_backend/src/routes/donations/: donation_event.rs  mod.rs  subscriptions.rs
query_interface_backend/src/routes/helpers/: user_identifier.rs
query_interface_backend/src/routes/users/: messages.rs  mod.rs  name_changes.rs
report_generator/: Cargo.toml  Dockerfile
report_generator/kube/: job-generate-report.yaml
report_generator/src/: chat_statistics.rs  clap.rs  currency_exchangerate.rs  errors.rs  lib.rs  main.rs  reports.rs  testing_helper_methods.rs  upload_reports.rs
report_generator/src/conditions/: mod.rs  query_conditions.rs  query_conditions_builder.rs
report_generator/src/query_result_models/: emote_usage_contents.rs
report_generator/src/report_builders/: mod.rs
report_generator/src/report_builders/tables/: chat_messages.rs  mod.rs  raids.rs  timeouts.rs  top_emotes.rs
report_generator/src/report_builders/templates/: chat_statistics.rs  mod.rs  subathon_statistics.rs  template_renderer.rs
report_generator/src/reports/: basic_reports.rs  chosen_report.rs  mod.rs  subathon_points.rs  subathon_reports.rs
report_generator/src/templates/: chat_messages.rs  chat_statistics.rs  mod.rs
report_generator/src/templates/chat_messages/: messages_with_word_counts.rs  ranking_table.rs
report_generator/src/templates/donation_rankings/: top_donators.rs  top_donators_tables.rs
report_generator/template_files/: donation_stats  general_chat_stats  subathon_stats
spanix_scrubber/: Cargo.toml
spanix_scrubber/src/: clap.rs  config.rs  lib.rs  main.rs  process_messages.rs  scrub_messages.rs
spanix_scrubber/src/response_models/: avaiable_logs.rs  mod.rs  user_messages.rs
src/: lib.rs  (+7 more)
twitch_chat_tracker/: Cargo.toml  Dockerfile
twitch_chat_tracker/kube/: deploy-twitch-chat-logger.yaml
twitch_chat_tracker/src/: errors.rs  lib.rs  logging.rs  main.rs  testing_helper_methods.rs
twitch_chat_tracker/src/channel/: mod.rs  third_party_emote_list.rs  third_party_emote_list_storage.rs  tracked_channels.rs
twitch_chat_tracker/src/errors/: extensions.rs  sea_orm_db_error_extensions.rs
twitch_chat_tracker/src/irc_chat/: message_parser.rs  mod.rs  sub_tier.rs  twitch_irc.rs
twitch_chat_tracker/src/irc_chat/message_parser/: bits_message_parsing.rs  gift_sub_message_parsing.rs  (+7 more)
twitch_chat_tracker/src/manual_migrations/: convert_message_third_party_emotes_into_emote_tables.rs  fix_donations.rs  mod.rs  other.rs  store_chatterino_messages.rs
twitch_chat_tracker/src/processes/: app_animation.rs  main_process.rs  message_results.rs
update_changed_names/: Cargo.toml  Dockerfile  cronjob-update_changed_names.yaml
update_changed_names/kube/: cronjob-update-changed-names.yaml
update_changed_names/src/: config.rs  lib.rs  main.rs  rate_limiter.rs
(+160 files in other folders)
