[package]
name = "twitch-chat-logger"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ 
  "app_config", 
  "database_connection", 
  "database_report_generator", 
  "entities",
  "migration",
]

[dependencies]
tracing = "0.1.*"
tracing-subscriber = "0.3.*"
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.*"
reqwest = "0.12.9"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1.*"
thiserror = "2.0.*"
chrono = "0.4.*"
irc = "1.0.0"
sea-orm = { version = "1.1.*", features = ["sqlx-mysql", "runtime-tokio", "macros"] } 
url = "2.5.4"
schematic = { version = "0.18.*", features = ["yaml", "env"] }
database_connection = { path = "database_connection" }
app_config = { path = "app_config" }
entities = { path = "entities" }
strsim = "0.11.1"
