[package]
name = "twitch-chat-logger"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ 
  "app_config", 
  "database_connection", 
  "database_report_generator", 
  "entities", "entity_extensions",
  "migration",
]

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
reqwest = "0.12.15"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
thiserror = "2.0.12"
chrono = "0.4.40"
irc = "1.0.0"
sea-orm = { version = "1.1.8", features = ["sqlx-mysql", "runtime-tokio", "macros"] } 
url = "2.5.4"
app_config = { path = "app_config" }
database_connection = { path = "database_connection" }
entities = { path = "entities" }
entity_extensions = { path = "entity_extensions" }

[dev-dependencies]
entity_extensions = { path = "entity_extensions", features = ["__test_hook"] }
