[package]
name = "twitch-chat-logger"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ 
  "app_config", 
  "database_connection", 
  "database_report_generator", 
  "entities", 
  "entity_extensions",
  "migration", 
  "update_changed_names",
  "query-interface-backend", 
]

[dependencies]
app_config = { path = "app_config" }
database_connection = { path = "database_connection" }
entities = { path = "entities" }
entity_extensions = { path = "entity_extensions" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
thiserror = "2.0.12"
chrono = "0.4.40"
irc = "1.1.0"
sea-orm = { version = "1.1.11", features = ["sqlx-mysql", "runtime-tokio", "macros"] } 
url = "2.5.4"
tungstenite = "0.26.2"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
futures-util = { version = "0.3.31", features = [] }
futures = { version = "0.3.31", features = [] }

[dev-dependencies]
entity_extensions = { path = "entity_extensions", features = ["__test_hook"] }
app_config = { path = "app_config", features = ["__test_hook"] }
