[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
entities = { path = "../entities" }
entity_extensions = { path = "../entity_extensions" }
app_config = { path = "../app_config" }
database_connection = { path = "../database_connection" }
axum = { version = "0.8", features = ["macros"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
sea-orm = { version = "1.1", features = ["sqlx-mysql", "runtime-tokio", "macros"] } 
http = "1.3"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = "0.12"
