[package]
name = "database_connection"
version = "0.1.0"
edition = "2021"

[dependencies]
app_config = { path = "../app_config" }
migration = { path = "../migration" }
sea-orm = { version = "1.1.*", features = ["sqlx-mysql", "runtime-tokio", "macros"] } 
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0.*"
entities = { path = "../entities" }
chrono = "0.4.40"

