[package]
name = "entities"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1.*", features = ["sqlx-mysql", "runtime-tokio", "macros"] } 
serde_json = "1.0.*"
tracing = "0.1.*"
anyhow = "1.0.*"
database_connection = { path = "../database_connection" }
app_config = { path = "../app_config" }
chrono = "0.4.*"
url = "2.5.*"
reqwest = "0.12.*"
lazy_static = "1.5.*"
