[package]
name = "entity_extensions"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.*", features = ["sqlx-mysql", "runtime-tokio", "macros"] } 
serde_json = "1.0.*"
tracing = "0.1.*"
anyhow = "1.0.*"
chrono = "0.4.*"
url = "2.5.*"
reqwest = "0.12.*"
strsim = "0.11.*"
app_config = { path = "../app_config" }
entities = { path = "../entities" }

[features]
__test_hook = []
