[package]
name = "entity_extensions"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.10", features = ["sqlx-mysql", "runtime-tokio", "macros"] } 
serde_json = "1.0.140"
tracing = "0.1.41"
chrono = "0.4.40"
url = "2.5.4"
reqwest = "0.12.15"
strsim = "0.11.1"
thiserror = "2.0.12"
app_config = { path = "../app_config" }
entities = { path = "../entities" }

[features]
__test_hook = []
