[package]
name = "query_interface_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
entities = { path = "../entities" }
app_config = { path = "../app_config" }
axum = { version = "0.8.4", features = [] }
sqlx = { version = "0.8.5", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
