[package]
name = "report_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
app_config = { path = "../app_config" }
database_connection = { path = "../database_connection" }
entities = { path = "../entities" }
entity_extensions = { path = "../entity_extensions" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47", features = ["full"] }
sea-orm = { version = "1.1", features = ["sqlx-mysql", "runtime-tokio", "macros", "mock"] } 
tabled = "0.20"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
human-time = "0.1"
serde_json = "1.0"
reqwest = "0.12"
chrono = "0.4"
num-traits = "0.2"
clap = "4.5"
