[package]
name = "spanix_scrubber"
version = "0.1.0"
edition = "2024"

[dependencies]
twitch_chat_tracker = { path = "../twitch_chat_tracker" }
database_connection = { path = "../database_connection" }
entities = { path = "../entities" }
entity_extensions = { path = "../entity_extensions/" }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.47", features = ["full"] }
sea-orm = { version = "1.1", features = ["sqlx-mysql", "runtime-tokio", "macros", "mock"] } 
irc = "1.1"
futures = { version = "0.3", features = [] }
clap = "4.5"
