[package]
name = "twitch_chat_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
app_config = { path = "../app_config" }
database_connection = { path = "../database_connection" }
entities = { path = "../entities" }
entity_extensions = { path = "../entity_extensions" }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"
thiserror = "2.0"
chrono = "0.4"
irc = "1.1"
sea-orm = { version = "1.1", features = ["sqlx-mysql", "runtime-tokio", "macros", "mock"] } 
url = "2.5"
tungstenite = "0.28"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = { version = "0.3", features = [] }
futures = { version = "0.3", features = [] }
regex = "1.11"

[dev-dependencies]
entity_extensions = { path = "../entity_extensions", features = ["__test_hook"] }
app_config = { path = "../app_config", features = ["__test_hook"] }

